# redosaur

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/src/: analyzer.rs  engine.rs  generator.rs  lib.rs  parser.rs  rewrite.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  VISION.md
docs/launch/: devto.md
site/: index.html
site/css/: style.css
site/js/: audio.js  demo.js  main.js  wasm-loader.js
