[package]
name = "redosaur-wasm"
description = "WASM bridge exposing the ReDoSaur core engine to JavaScript"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
redosaur-core = { path = "../core" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = ["console_error_panic_hook"]
